--- a/cloudformation-template.yaml
+++ b/cloudformation-template.yaml
@@ -14,7 +14,7 @@ Resources:
       BucketName: !Sub "flags-${Environment}"
       WebsiteConfiguration:
         IndexDocument: index.html
-        ErrorDocument: 404.html
+        ErrorDocument: index.html
       PublicAccessBlockConfiguration:
         BlockPublicAcls: true
         BlockPublicPolicy: false
